Fixed flexbox layout for the card, now it wraps its content, so that longer text doesn't overflow. Height of card is determined by its content.

--- a/app/scss/components/attribution.scss
+++ b/app/scss/components/attribution.scss
@@ -1,9 +1,7 @@
 .attribution {
     font-size: var(--font-attribution-size);
     text-align: center;
-    position: absolute;
-    bottom: 0;
-    padding: 1.875rem;
+    margin-top: 1rem;
     
     a {
         color: hsl(228, 45%, 44%);
