--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -1,26 +1,39 @@
 .card {
-    width: 20rem;
-    max-height: 31.0625rem;
+    // Max witdth so that it doesn't grow more than that, but the content of the card should grow in height then
+    max-width: 20rem;
+    
+    // White with rounded corners
     background-color: var(--white);
     border-radius: 1.125rem;
+    padding: 1rem;
+
+    // Layout
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
+    // Avoid the overflowing outside of container
+    flex-wrap: wrap;
+    
+    // Subtle shadow
     box-shadow: 0 1.5rem 1.25rem  rgba(0, 0, 0, 0.05);
 
 
     &__img {
-        display: block;
-        width: 18rem;
-        height: 18rem;
-        border-radius: .5rem;
+        flex-grow: 1;
+        // Specifies that the image will shrink with the card
+        flex-shrink: 1;
+        // The image will always scale by being 100% of the container's width
+        width: 100%;
     }
 
     &__content {
+        // Layout
         display: flex;
         flex-direction: column;
         align-items: center;
+        // Avoid the overflowing outside of container
+        flex-wrap: wrap;
+        
         padding: .8rem;
         margin-bottom: 1rem;
     }
