--- a/app/scss/globals/typography.scss
+++ b/app/scss/globals/typography.scss
@@ -6,6 +6,10 @@ p {
 	// line-height: 1.1;
 }
 
+h1 {
+	font-size: 1.4rem;
+}
+
 a,
 a:visited,
 a:active {
